<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:key="items_caching"
        app:iconSpaceReserved="false"
        android:summaryOff="@string/pref_switch_items_caching_off"
        android:summaryOn="@string/pref_switch_items_caching_on"
        android:title="@string/pref_switch_items_caching" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="periodic_refresh"
        android:dependency="items_caching"
        app:iconSpaceReserved="false"
        android:summaryOff="@string/pref_switch_periodic_refresh_off"
        android:summaryOn="@string/pref_switch_periodic_refresh_on"
        android:title="@string/pref_switch_periodic_refresh" />

    <EditTextPreference
        android:dependency="periodic_refresh"
        android:defaultValue="360"
        android:inputType="number"
        app:iconSpaceReserved="false"
        android:key="periodic_refresh_minutes"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_periodic_refresh_minutes_title" />

    <SwitchPreference
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        android:key="refresh_when_charging"
        android:dependency="periodic_refresh"
        android:title="@string/pref_switch_refresh_when_charging" />

    <SwitchPreference
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        android:key="notify_new_items"
        android:dependency="periodic_refresh"
        android:title="@string/pref_switch_notify_new_items" />

    <SwitchPreference
        android:defaultValue="true"
        app:iconSpaceReserved="false"
        android:key="update_sources"
        android:summary="@string/pref_switch_update_sources_summary"
        android:title="@string/pref_switch_update_sources" />
</PreferenceScreen>
