<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/unread_action"
        android:icon="@drawable/ic_baseline_white_eye_24dp"
        android:title="@string/unmark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more_action"
        android:icon="@drawable/ic_chrome_reader_mode_white_24dp"
        android:title="@string/reader_action_more"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open_action"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:title="@string/reader_action_open"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_action"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/reader_action_share"
        app:showAsAction="ifRoom" />

</menu>